# fizgravity-ar-engine

./: .gitignore  Cargo.toml  README.md  build_err.txt
docs/: Arsitektur AR Engine, Metode Live Preview, dan Daftar Lengkap Fitur Makeup Hiper Realistis.md  PRD_AR_Engine.md  Project_Plan_Roadmap.md  agent_instruction_client_integrator.md  agent_instruction_rust_coder.md  ar_engine_onnx_modifications.md  ar_tryon_feature_list.md  glowmatch_cosmetic_indices_guide.md  glowmatch_hyper_realistic_ar_makeup_research.md  glowmatch_integration_audit.md  glowmatch_next_level_onnx_tracker_brainstorm.md  glowmatch_zero_latency_tracking_brainstorm.md  implementation_plan_AR_VTO_glowmatch.md  next_gen_ar_modules_roadmap.md  onnx_face_tracker_guide.md  task.md
include/: ar_bridge.h
src/: calibration.rs  canonical_uv.rs  color_harmonizer.rs  extrapolator.rs  eye_contacts.rs  face.rs  hand.rs  imu.rs  lib.rs  lighting.rs  makeup_triangulator.rs  math.rs  msckf.rs  p2p.rs  pbr_makeup.rs  physics.rs  segmentation.rs  skin_analyzer.rs  splatting.rs  stabilizer.rs  texture_analyzer.rs  tsdf.rs
